pipelines/simplePipeline-2/deployment/namesace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/marrober/simple-apps.git
  name: simple-pipeline-2
